     They can be changed in the Options page (item 20/26)

   o trigger/layer edit views now also supported for drum tracks

   o reference step for pattern changes now works indpendent from reference step used for sync-to-measure

   o PATTERN page: pattern is switched immediately if SELECT button is pressed, regardless of
     the pattern change synchronisation option.

   o Bugfix for permanently cleared notes if live recording is used after previous step recording

   o experimental (might be optional in future): show measure and pattern step position in main screen


MIDIboxSEQ V4.094b
~~~~~~~~~~~~~~~~~~

   o fixed LED handling for common frontpanels (e.g. MUTE LED stayed active regardless of selected view)


MIDIboxSEQ V4.094
~~~~~~~~~~~~~~~~~

   o support for Antilog Frontpanel.
     The appr. HW configuration file can be found under hwcfg/antilog/MBSEQ_HW.V4

   o enhanced COPY/PASTE/CLEAR functions for following pages:
     - PATTERN page: copy/paste/clears all patterns.
                     Special function: by pressing COPY+PASTE the patterns will be pasted into the next slots
     - PARSEL page: copy/paste/clears the currently selected parameter layer only
     - TRGSEL page: copy/paste/clears the currently selected trigger layer only
     - INSSEL page: copy/paste/clears the currently selected instrument only
                    (useful for drums: corresponding trigger any parameter layers are cleared)

   o improved ALL button behaviour

   o New worflow for PATTERN page:
     GP 1/2, 5/6, 9/10, 13/14 allow to select group as well
     (especially interesting for Antilog Frontpanel: Selection buttons can be used for mutes)

   o New worflow for MUTE page:
     Whenever a track or parameter layer is unmuted, it will be automatically selected

   o EDIT page: improved handling for chord layers

   o moved some configuration settings which were previously part of the
     MBSEQ_HW.V4 file to the Options page, so that they can be changed without