@@ -366,6 +366,10 @@ s32 SEQ_FILE_GC_Read(void)
 #ifndef MBSEQV4L
 	    seq_ui_options.MODIFY_PATTERN_BANKS = value;
 #endif
+	  } else if( strcmp(parameter, "UiPrintAndModifyWithoutGates") == 0 ) {
+#ifndef MBSEQV4L
+	    seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES = value;
+#endif
 	  } else if( strcmp(parameter, "RemoteMode") == 0 ) {
 	    seq_midi_sysex_remote_mode = (value > 2) ? 0 : value;
 	  } else if( strcmp(parameter, "RemotePort") == 0 ) {
@@ -652,6 +656,11 @@ static s32 SEQ_FILE_GC_Write_Hlp(u8 write_to_file)
 
 #ifndef MBSEQV4L
   sprintf(line_buffer, "UiModifyPatternBanks %d\n", seq_ui_options.MODIFY_PATTERN_BANKS);
+  FLUSH_BUFFER;
+#endif
+
+#ifndef MBSEQV4L
+  sprintf(line_buffer, "UiPrintAndModifyWithoutGates %d\n", seq_ui_options.PRINT_AND_MODIFY_WITHOUT_GATES);
   FLUSH_BUFFER;
 #endif
 
