@@ -196,6 +196,7 @@ typedef union {
   struct {
     u8 RESTORE_TRACK_SELECTIONS:1;
     u8 MODIFY_PATTERN_BANKS:1;
+    u8 PRINT_AND_MODIFY_WITHOUT_GATES:1;
   };
 } seq_ui_options_t;
 
